feat: add commitments to create tables
