# translation-layer/src/api/tables.rs
@@ -62,11 +62,25 @@ pub async fn create_table(
     let mut table_creator = TableCreator::new();
 
     for table in request.tables {
+        let decoded_commitment = match base64::decode(&table.commitment) {
+            Ok(bytes) => bytes,
+            Err(_) => {
+                return Json(ApiResponse {
+                    success: false,
+                    err_msg: Some("Invalid base64 commitment".into()),
+                    tx_hash: None,
+                });
+            }
+        };
+
         table_creator
             .add_table()
             .identifier(&table.table_name, &table.schema_name)
             .ddl_statement(&table.ddl_statement)
             .table_type(request.table_type.clone().into())
+            .commitment_scheme(table.commitment_scheme.clone())
+            .commitment(&decoded_commitment)
+            .snapshot_url(&table.snapshot_url)
             .add();
     }
 
